# dpyhr

./: Makefile  README.md  pyproject.toml
.github/workflows/: beautify.yml  build_and_push.yml
dpyhr/: __init__.py  log_dummy.py  normal.py  polling.py  utils.py
test_case/: main.py
test_case/cogs/: hello_world.py
tests/: test_bot.py  test_normal_properties.py
